--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,25 @@
 </head>
 
 <body>
-  <h2 class="title">wave of time</h2>
+  <main>
+    <h2 class="title">Hello world! </h2>
+    <h2 class='sub_title'>I</h2>
+    <h2 class='sub_title'>Find</h2>
+    <h2 class='sub_title'>JOB</h2>
+    <h2 class='sub_title'>Front-end Developer</h2>
+
+    <img class="stack-item ico-css" src="./images/ico/css.png" alt="html">
+    <img class="stack-item ico-html" src="./images/ico/html.png" alt="html">
+    <img class="stack-item ico-js" src="./images/ico/javascript_icon.png" alt="html">
+    <img class="stack-item ico-react" src="./images/ico/react_ico.png" alt="html">
+    <img class="stack-item ico-node" src="./images/ico/nodejs_ico.png" alt="html">
+    <img class="stack-item ico-webpack" src="./images/ico/webpack.png" alt="html">
+    <img class="stack-item ico-pixi" src="./images/ico/pixi.png" alt="html">
+    <img class="stack-item ico-sass" src="./images/ico/sass.png" alt="html">
+    <img class="stack-item ico-npm" src="./images/ico/npm_icon.png" alt="html">
+  </main>
+
+
 </body>
 
 </html>
